tests/ui/invalid_transition.stderr
error[E0277]: the trait bound `String: EventPayload` is not satisfied
  --> tests/ui/invalid_transition.rs:28:18
   |
28 |     _transition: Transition<From, To, String>,
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EventPayload` is not implemented for `String`
   |
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                                                              ^^^^^^^^^^^^ required by this bound in `Transition`

error[E0277]: the trait bound `String: EventPayload` is not satisfied
  --> tests/ui/invalid_transition.rs:42:22
   |
42 |     apply_transition(Transition::<String, Released, String>::from_payload("bad".to_string()));
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EventPayload` is not implemented for `String`
   |
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                                                              ^^^^^^^^^^^^ required by this bound in `Transition`

error[E0277]: the trait bound `String: StateMarker` is not satisfied
  --> tests/ui/invalid_transition.rs:42:22
   |
42 |     apply_transition(Transition::<String, Released, String>::from_payload("bad".to_string()));
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `StateMarker` is not implemented for `String`
   |
   = help: the following other types implement trait `StateMarker`:
             Acquired
             Released
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                             ^^^^^^^^^^^ required by this bound in `Transition`

error[E0599]: the function or associated item `from_payload` exists for struct `Transition<String, Released, String>`, but its trait bounds were not satisfied
  --> tests/ui/invalid_transition.rs:42:62
   |
42 |     apply_transition(Transition::<String, Released, String>::from_payload("bad".to_string()));
   |                                                              ^^^^^^^^^^^^ function or associated item cannot be called on `Transition<String, Released, String>` due to unsatisfied trait bounds
   |
  ::: $RUST/alloc/src/string.rs
   |
   | pub struct String {
   | ----------------- doesn't satisfy `String: EventPayload` or `String: StateMarker`
   |
   = note: the following trait bounds were not satisfied:
           `String: StateMarker`
           `String: EventPayload`
